--- a/cg/meta/report/templates/balsamic_report.html
+++ b/cg/meta/report/templates/balsamic_report.html
@@ -125,7 +125,7 @@
                    </td>
                 {% endif %}
                   <td>{{ sample.methods.sequencing }}</td>
-                  <td>{{ sample.timestamps.sequenced_at }}</td>
+                  <td>{{ sample.timestamps.reads_updated_at }}</td>
                   <td>{{ case.data_analysis.pipeline }}</td>
                 </tr>
               {% endfor %}
