--- a/cg/meta/report/templates/mip-dna_report.html
+++ b/cg/meta/report/templates/mip-dna_report.html
@@ -126,7 +126,7 @@
                   <td>{{ sample.timestamps.prepared_at }}</td>
                   <td>{{ sample.metadata.bait_set }}</td>
                   <td>{{ sample.methods.sequencing }}</td>
-                  <td>{{ sample.timestamps.sequenced_at }}</td>
+                  <td>{{ sample.timestamps.reads_updated_at }}</td>
                   <td>{{ case.data_analysis.pipeline }}</td>
                 </tr>
               {% endfor %}
