--- a/cg/meta/report/templates/rnafusion_report.html
+++ b/cg/meta/report/templates/rnafusion_report.html
@@ -114,7 +114,7 @@
                   <td>{{ sample.methods.library_prep }}</td>
                   <td>{{ sample.timestamps.prepared_at }}</td>
                   <td>{{ sample.methods.sequencing }}</td>
-                  <td>{{ sample.timestamps.sequenced_at }}</td>
+                  <td>{{ sample.timestamps.reads_updated_at }}</td>
                   <td>{{ case.data_analysis.pipeline }}</td>
                 </tr>
               {% endfor %}
