--- a/cg/meta/report/templates/balsamic_report.html
+++ b/cg/meta/report/templates/balsamic_report.html
@@ -168,12 +168,13 @@
                 <th>Läspar [M]</th>
                 <th>Mediantäckning [baser]</th>
               {% if "helgenomsekvensering" in case.data_analysis.type %}
-                  {% if "normal" in case.data_analysis.type %}
-                    <th>Täckningsgrad 15x [%]</th>
-                    <th>Täckningsgrad 60x [%]</th>
-                  {% else %}
-                    <th>Täckningsgrad 60x [%]</th>
-                  {% endif %}
+                {% if "normal" in case.data_analysis.type %}
+                  <th>Täckningsgrad 15x [%]</th>
+                  <th>Täckningsgrad 60x [%]</th>
+                {% else %}
+                  <th>Täckningsgrad 60x [%]</th>
+                {% endif %}
+                <th>PCT_PF_READS_IMPROPER_PAIRS [%]</th>
               {% else %}
                 <th>Täckningsgrad 250x [%]</th>
                 <th>Täckningsgrad 500x [%]</th>
@@ -197,6 +198,7 @@
                     {% else %}
                       <td>{{ sample.metadata.pct_60x }}</td>
                     {% endif %}
+                    <td>{{ sample.metadata.pct_pf_reads_improper_pairs }}</td>
                   {% else %}
                     <td>{{ sample.metadata.median_target_coverage }}</td>
                     <td>{{ sample.metadata.pct_250x }}</td>
@@ -217,7 +219,9 @@
               <ins>Duplikat</ins>: Sekvenseringsläsningar som är i duplikat och därmed ej unika sekvenser. Hög mängd duplikat kan tyda på dålig komplexitet av sekvenserad bibliotek eller djup sekvensering.<br>
               <ins>Medelfragmentlängd</ins>: Medelstorlek av provbiblioteken som laddats på sekvenseringsinstrument. <200bp kan tyda på degraderade provmaterial (t.ex. FFPE), innan biblioteksberedning.<br>
               <ins>Fold 80 base penalty</ins>: Jämnhet av täckningsgraden över alla gener i analyspanlen. Ett värde mellan 1.0-1.8 visar god jämnhet.<br>
-              {% if "panelsekvensering" in case.data_analysis.type %}
+              {% if "helgenomsekvensering" in case.data_analysis.type %}
+                <ins>PCT_PF_READS_IMPROPER_PAIRS</ins>: The fraction of (primary) reads that are *not* "properly" aligned in pairs.<br>
+              {% else %}
                 <ins>GC dropout</ins>: A measure of how undercovered >= 50% GC regions are relative to the mean. E.g. if the value is 5% this implies that 5% of total reads that should have mapped to GC<=50% regions mapped elsewhere.<br>
               {% endif %}
               <br>
