--- a/cg/meta/report/templates/balsamic_report.html
+++ b/cg/meta/report/templates/balsamic_report.html
@@ -220,7 +220,7 @@
               <ins>Medelfragmentlängd</ins>: Medelstorlek av provbiblioteken som laddats på sekvenseringsinstrument. <200bp kan tyda på degraderade provmaterial (t.ex. FFPE), innan biblioteksberedning.<br>
               <ins>Fold 80 base penalty</ins>: Jämnhet av täckningsgraden över alla gener i analyspanlen. Ett värde mellan 1.0-1.8 visar god jämnhet.<br>
               {% if "helgenomsekvensering" in case.data_analysis.type %}
-                <ins>PCT_PF_READS_IMPROPER_PAIRS</ins>: The fraction of (primary) reads that are *not* "properly" aligned in pairs.<br>
+                <ins>PCT_PF_READS_IMPROPER_PAIRS</ins>: The fraction of (primary) reads that are not properly aligned in pairs.<br>
               {% else %}
                 <ins>GC dropout</ins>: A measure of how undercovered >= 50% GC regions are relative to the mean. E.g. if the value is 5% this implies that 5% of total reads that should have mapped to GC<=50% regions mapped elsewhere.<br>
               {% endif %}
