--- a/cg/meta/report/templates/balsamic_report.html
+++ b/cg/meta/report/templates/balsamic_report.html
@@ -222,7 +222,7 @@
               {% if "helgenomsekvensering" in case.data_analysis.type %}
                 <ins>PCT_PF_READS_IMPROPER_PAIRS</ins>: The fraction of (primary) reads that are not properly aligned in pairs.<br>
               {% else %}
-                <ins>GC dropout</ins>: A measure of how undercovered >= 50% GC regions are relative to the mean. E.g. if the value is 5% this implies that 5% of total reads that should have mapped to GC<=50% regions mapped elsewhere.<br>
+                <ins>GC dropout</ins>: Ett mått på hur dåligt täckta områden, med >= 50% GC innehåll, är i jämförelse med medelvärdet. Om värdet är 5%, innebär det att 5% av alla läsningar som borde ha kartlagts till områden med GC<=50%, kartlades någon annanstans.<br>
               {% endif %}
               <br>
               Värdena presenterade för <ins>Täckningsgrad</ins> och <ins>Mediantäckning</ins> är efter borttagning av duplikata läsningar.
