--- a/cg/meta/report/templates/balsamic_report.html
+++ b/cg/meta/report/templates/balsamic_report.html
@@ -220,7 +220,7 @@
               <ins>Medelfragmentlängd</ins>: Medelstorlek av provbiblioteken som laddats på sekvenseringsinstrument. <200bp kan tyda på degraderade provmaterial (t.ex. FFPE), innan biblioteksberedning.<br>
               <ins>Fold 80 base penalty</ins>: Jämnhet av täckningsgraden över alla gener i analyspanlen. Ett värde mellan 1.0-1.8 visar god jämnhet.<br>
               {% if "helgenomsekvensering" in case.data_analysis.type %}
-                <ins>PCT_PF_READS_IMPROPER_PAIRS</ins>: The fraction of (primary) reads that are not properly aligned in pairs.<br>
+                <ins>Läsningar med felaktiga par</ins>: Andelen (primära) läsningar som inte är korrekt parvis justerade.<br>
               {% else %}
                 <ins>GC dropout</ins>: Ett mått på hur dåligt täckta områden, med >= 50% GC innehåll, är i jämförelse med medelvärdet. Om värdet är 5%, innebär det att 5% av alla läsningar som borde ha kartlagts till områden med GC<=50%, kartlades någon annanstans.<br>
               {% endif %}
