--- a/cg/meta/report/templates/balsamic_report.html
+++ b/cg/meta/report/templates/balsamic_report.html
@@ -174,7 +174,7 @@
                 {% else %}
                   <th>Täckningsgrad 60x [%]</th>
                 {% endif %}
-                <th>PCT_PF_READS_IMPROPER_PAIRS [%]</th>
+                <th>Läsningar med felaktiga par [%]</th>
               {% else %}
                 <th>Täckningsgrad 250x [%]</th>
                 <th>Täckningsgrad 500x [%]</th>
