Update Rnafusion for release v3.0.1 (#2621) (major)
### Added
- Fusion VCF file to deliverables
- Gene counts file to deliverables
- CRAM index files to deliverables
- Scout upload of a Rnafusion alignment CRAM file
- Swedac logo in delivery report

### Changed
- Rnafusion bundle filenames
- Replaced deprecated metrics:
  - 5_3_bias by median_5prime_to_3prime_bias
  - reads_aligned by reads_pairs_examined
- Updated default parameters
- Skip path validation in model

--- a/cg/meta/report/templates/rnafusion_report.html
+++ b/cg/meta/report/templates/rnafusion_report.html
@@ -222,7 +222,17 @@
           <div class="card-block">
             <h4 class="card-title">Scout</h4>
             <div class="card-text">
-              <p>Gene fusioner finns uppladdade i Scout: <a href="https://scout.scilifelab.se/{{ customer.id }}/{{ case.name }}">scout.scilifelab.se/{{ customer.id }}/{{ case.name }}</a></p>
+              <p>Analysfiler finns uppladdade i Scout: <a href="https://scout.scilifelab.se/{{ customer.id }}/{{ case.name }}">scout.scilifelab.se/{{ customer.id }}/{{ case.name }}</a></p>
+              <ul>
+                <li>
+                  <strong>Kliniska Fusionsvarianter</strong>:
+                    {% if case.data_analysis.scout_files.vcf_fusion != 'N/A' %}
+                      <em>{{ case.data_analysis.scout_files.vcf_fusion.replace(case.id, case.name) }}</em>
+                    {% else %}
+                      <em>Inga fusionsvarianter upptäcktes</em>
+                    {% endif %}
+                </li>
+              </ul>
             </div>
           </div>
         {% endif %}
